--- a/frontend/src/components/card.module.css
+++ b/frontend/src/components/card.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 60%;
     width: 600px;
     border-radius: 10px;
     text-align: center;
@@ -67,7 +67,7 @@ h2{
 
 .divConfig{
     display: flex;
-    height: 100%;
+    height: 100vh;
     background-color: #f2f2f2;
     align-content: center;
     justify-content: center;
@@ -76,10 +76,10 @@ h2{
 .divform4{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 8px;
     width: 200px;
     height: 200px;    
     margin: 20px;
-    margin-top: 30px;
+    margin-top: 40px;
     
 }
