--- a/frontend/src/pages/padrao.module.css
+++ b/frontend/src/pages/padrao.module.css
@@ -1,6 +1,6 @@
 .allhome{
     display: flex;
-    height: 100%;
+    height: 90vh;
     background-color: #f2f2f2;
     align-content: center;
     justify-content: center;
@@ -19,11 +19,8 @@
     border-radius: 10px;
     width: 80%;
     margin-left: 20px;
-    max-height: 800px;
     overflow: scroll;
-    
     background-color: #ffffff;
-    
 }
 
 .tituloEstoque{
@@ -39,15 +36,15 @@
     text-align: center;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    
     padding: 15px;   
-    
+    margin-bottom: 20px;
     overflow: scroll;
 }
 .containerEstoque{
     display: flex;
     justify-content: center;
     background-color: #f2f2f2;
+    
     
 }
 .estoque table{
