--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -11,26 +11,32 @@
 .containerLogin{
     display: flex;
     flex-direction: column;
-    width: 400px;
-    height: 400px;
+    width: 500px;
+    height: 500px;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
     text-align: center;
     border-radius: 10px;
-    background-color: #ffffff;  
+    background-color: #009373;  
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin: 20px;
+    color: #ffffff;
 }
 
 .formLogin1{
     margin: 20px;
     margin-bottom: 10px;
     padding: 20px;
+    margin-top: 0px;
 }
 
 .formLogin2{
     margin: 20px;
-    margin-top: 10px;
+    margin-top: 0px;
     padding: 20px;
+}
+
+.imgLogin{
+    width: 200px;
+    height: 200px;
 }
